Fix popup on small screens

--- a/css/style.concat.css
+++ b/css/style.concat.css
@@ -660,6 +660,12 @@ body {
           content: "";
           display: table;
           clear: both; } }
+    @media (max-width: 28.125rem) {
+      .popup__left {
+        width: 0;
+        height: 0;
+        opacity: 0;
+        visibility: hidden; } }
   .popup__right {
     padding: 3rem 5rem;
     width: 66.66667;
@@ -669,6 +675,9 @@ body {
       .popup__right {
         display: block;
         width: 100%; } }
+    @media (max-width: 28.125rem) {
+      .popup__right {
+        height: 100%; } }
   .popup__img {
     display: block;
     width: 100%; }
@@ -772,10 +781,11 @@ body {
   @media (min-resolution: 120dpi) and (max-width: 37.5em), (min-width: 125em) {
     .header {
       background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero-small.jpg); } }
-  @media only screen and (max-width: 37.5em) {
+  @media only screen and (max-width: 56.25em) {
     .header {
       clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
-      -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%); } }
+      -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+      margin-bottom: 10rem; } }
   .header__logo-box {
     position: absolute;
     top: 4rem;
@@ -918,6 +928,9 @@ body {
     background-image: linear-gradient(110deg, transparent 0%, transparent 50%, #fff 50%);
     background-size: 220%;
     transition: all 0.5s; }
+    @media only screen and (max-width: 37.5em) {
+      .navigation__link:visited, .navigation__link:link {
+        font-size: 2.5rem; } }
   .navigation__link:hover, .navigation__link:active {
     color: #55c57a;
     background-position: 100%;
@@ -966,7 +979,7 @@ body {
   padding: 25rem 0; }
   @media only screen and (max-width: 56.25em) {
     .section-about {
-      padding: 20rem 0; } }
+      padding: 25rem 0; } }
 
 .section-features {
   padding: 20rem 0;
