--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -91,6 +91,9 @@
       font-weight: 200;
       text-transform: uppercase;
       font-size: 4rem;
+      @include respond(phone) {
+        font-size: 2.5rem;
+      }
       background-image: linear-gradient(
         110deg,
         transparent 0%,
